--- a/index.html
+++ b/index.html
@@ -8,22 +8,28 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Canvas animation 2D</title>
+    <style>
+        #canvas {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 
 <body>
 
-    <main class="container flex-column mt-3  shadow rounded-3 p-3">
-        <div class="d-flex justify-content-center flex-row mb-3">
-            <h1>Animaciones 2D con canvas</h1>
-        </div>
-        <div class="d-flex flex-row shadow-sm mb-1 p-3 justify-content-around">
-            <div class="d-flex justify-content-center flex-column mb-3">
-                <h5 class="d-flex justify-content-center">Multiobjetos</h5>
+    <header class="bg-primary text-white text-center py-3">
+        <h1>Animaciones 2D con Canvas</h1>
+    </header>
+
+    <main class="container mt-3 shadow rounded-3 p-3">
+        <div class="row shadow-sm mb-1 p-3">
+            <div class="col-12 col-md-6 d-flex justify-content-center flex-column mb-3">
+                <h5 class="text-center">Multiobjetos</h5>
                 <canvas class="border shadow" id="canvas"></canvas>
                 <br>
             </div>
-            <div class="d-flex justify-content-center flex-column mb-3">
-                <!-- <h3>Coordenadas: <span id="coordenadas"></span></h3> -->
+            <div class="col-12 col-md-6 d-flex justify-content-center flex-column mb-3">
                 <table class="table table-striped table-bordered">
                     <thead class="thead-dark">
                         <tr>
@@ -33,12 +39,16 @@
                         </tr>
                     </thead>
                     <tbody id="coord__details">
-                        
+                        <!-- Coordenadas de los círculos se añadirán aquí -->
                     </tbody>
                 </table>
             </div>
         </div>
     </main>
+
+    <footer class="bg-dark text-white text-center py-3 mt-3">
+        <p>&copy; 2024 Animaciones 2D con Canvas. Todos los derechos reservados.</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
