--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Canvas animation 2D</title>
+    <title>Control deslizante</title>
     <style>
         #canvas {
             max-width: 100%;
@@ -23,6 +22,13 @@
     </header>
 
     <main class="container mt-3 shadow rounded-3 p-3">
+        <div class="row mb-3">
+            <div class="col-12">
+                <label for="rangeInput" class="form-label">Control deslizante</label>
+                <input type="range" class="form-range" min="0" max="10" step="1" id="rangeInput" value="5">
+                <p>Valor seleccionado: <span id="rangeValue">5</span></p>
+            </div>
+        </div>
         <div class="row shadow-sm mb-1 p-3">
             <div class="col-12 col-md-6 d-flex justify-content-center flex-column mb-3">
                 <h5 class="text-center">Multiobjetos</h5>
